--- a/app/globals.css
+++ b/app/globals.css
@@ -175,3 +175,67 @@
     width: 100%;
   }
 }
+
+.slide-box {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  animation: slide 5s linear 1;
+}
+@keyframes slide {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: 20%;
+  }
+  40% {
+    left: 40%;
+
+  }
+  60% {
+    left: 60%;
+
+  }
+  80% {
+    left: 80%;
+  }
+  100% {
+    left: 100%;
+    overflow: hidden;
+    visibility: hidden;
+  }
+}
+
+/* globals.css */
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    background-color: #91c12e;
+  }
+  to {
+    opacity: 0;
+    background-color: #ffffff;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+body.animate-out {
+  animation: fadeOut 1s forwards;
+}
+
+body.animate-in {
+  animation: fadeIn 1s forwards;
+}
