--- a/app/globals.css
+++ b/app/globals.css
@@ -239,3 +239,111 @@ body.animate-out {
 body.animate-in {
   animation: fadeIn 1s forwards;
 }
+
+.meeting-room {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 1rem;
+  color: white;
+}
+
+.video-container {
+  position: relative;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.video-layout {
+  flex: 1;
+  max-width: 1280px;
+  padding: 0.5rem;
+}
+
+.participants-list {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 25%;
+  background-color: rgba(59, 59, 59, 0.75);
+  padding: 0.5rem;
+}
+
+.controls-bar {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(59, 59, 59, 0.75);
+  padding: 0.5rem 0;
+}
+
+.controls-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem 1.25rem;
+  padding: 0 0.5rem;
+}
+
+.layout-dropdown {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-trigger {
+  cursor: pointer;
+  border-radius: 1rem;
+  background-color: #1a2d19;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.2s ease;
+}
+
+.dropdown-trigger:hover {
+  background-color: #4c535b;
+}
+
+.dropdown-content {
+  border-color: #1c1c1c;
+  background-color: #1c1c1c;
+  color: white;
+}
+
+.dropdown-separator {
+  border-color: #1c1c1c;
+}
+
+.participants-toggle {
+  cursor: pointer;
+  border-radius: 1rem;
+  background-color: #1c2d19;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.2s ease;
+}
+
+.participants-toggle:hover {
+  background-color: #4c535b;
+}
+
+.icon {
+  color: white;
+}
+
+.chat-room-container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  max-width: 25%;
+  height: 75%;
+  background-color: rgba(59, 59, 59, 0.75);
+  padding: 0.5rem;
+  color: white;
+}
